Adjust top position of node banner to fix mobile overlap

--- a/web/themes/custom/nicsdru_dept_theme/src/scss/3_components/block/node-banner.scss
+++ b/web/themes/custom/nicsdru_dept_theme/src/scss/3_components/block/node-banner.scss
@@ -1,6 +1,6 @@
 .node-banner {
   position: relative;
-  top: 5rem;
+  top: 3rem;
 
   .field--name-field-banner-image-overlay {
     position: absolute;
